appId: com.navigationbenchmark
---
- repeat:
    times: 50
    commands:
      - launchApp
      - assertVisible: "Navigation Benchmark"
      - tapOn: "JS Stack Navigator"
      - assertVisible: "NavigationType: JS Stack Navigation"
      - tapOn: "Go to Screen B"
      - assertVisible: "Screen B"
